AlarmService.class 파일 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <service
+            android:name=".AlarmService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -56,8 +60,7 @@
         </activity> <!-- 지도 액티비티 -->
         <activity
             android:name=".MapActivity"
-            android:launchMode="singleTop" />
-        <!-- 마이페이지 액티비티 -->
+            android:launchMode="singleTop" /> <!-- 마이페이지 액티비티 -->
         <activity
             android:name=".SettingActivity"
             android:launchMode="singleTop">
