build.gradle 파일에 CompactCalendarView dependencies 추가 activity_calendar.xml 파일에 CompactCalendarView 추가 CalendarActivity.class 파일에 CompactCalendarView 리소스 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <service
             android:name=".AlarmService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
