--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,13 +105,7 @@
                 <action android:name="android.intent.action.SEND" />
             </intent-filter>
         </activity> <!-- 캘린더 리스트 액티비티 -->
-        <activity
-            android:name=".CalendarListActivity"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-            </intent-filter>
-        </activity> <!-- 메뉴 룰렛 액티비티 -->
+        <!-- 메뉴 룰렛 액티비티 -->
         <activity
             android:name=".MenuPickerActivity"
             android:launchMode="singleTop" /> <!-- 알람 액티비티 -->
