SignupActivity.class 파일 삭제함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,13 +88,7 @@
             </intent-filter>
         </activity> <!-- 로그인 액티비티 -->
         <!-- 계정생성 액티비티 -->
-        <activity
-            android:name=".SignUpActivity"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-            </intent-filter>
-        </activity> <!-- 캘린더 리스트 액티비티 -->
+        <!-- 캘린더 리스트 액티비티 -->
         <!-- 메뉴 룰렛 액티비티 -->
         <activity
             android:name=".MenuPickerActivity"
