--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,6 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".NutrientInfoActivity"></activity>
 
         <service
             android:name=".AlarmService"
@@ -86,9 +85,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
             </intent-filter>
-        </activity> <!-- 로그인 액티비티 -->
-        <!-- 계정생성 액티비티 -->
-        <!-- 캘린더 리스트 액티비티 -->
+        </activity>
         <!-- 메뉴 룰렛 액티비티 -->
         <activity
             android:name=".MenuPickerActivity"
@@ -96,6 +93,8 @@
         <activity
             android:name=".AlarmActivity"
             android:launchMode="singleTop" />
+        <activity android:name=".NutrientInfoActivity"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
