NutrientInfoActivity.class 파일명 변경 (NutrientInfoActivity.class -> RecipeInfoActivity.class)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
         <activity
             android:name=".AlarmActivity"
             android:launchMode="singleTop" />
-        <activity android:name=".NutrientInfoActivity"
+        <activity android:name=".RecipeInfoActivity"
             android:launchMode="singleTop"/>
     </application>
 
