--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.airbnb.android:lottie:2.8.0'
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    //implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'com.google.android.material:material:1.2.0-beta01'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
