RecipeActivity.class 파일명 MealMateActivity.class로 변경 MealMateActivity.class 파일의 레이아웃 리소스 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,7 @@
         <activity
             android:name=".AlarmActivity"
             android:launchMode="singleTop" />
-        <activity android:name=".RecipeInfoActivity"
+        <activity android:name=".MealMateActivity"
             android:launchMode="singleTop"/>
     </application>
 
